--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <div class="container">
         <div class="title">Git & Gitflow</div>
         <div class="subtitle"> #commit #status #add #pull #push #merge</div>
+        <div class="subtitle"> #IATeam</div>
         <hr>
         <div class="text-center">
             <h3>Equipo 1</h3>
